# pathfinder

./: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  main.c  pathfinder  pathfinder.h  qwe  qwe17  tolik
inc/: pathfinder.h
libmx/: Makefile  mx_pop_back.c  mx_pop_front.c  mx_print_strarr.c
libmx/inc/: libmx.h
libmx/src/: mx_atoi.c  mx_bubble_sort.c  mx_count_parallel.c  mx_create_node.c  mx_create_node_count.c  mx_create_node_custom.c  mx_default_deixtra_matrix.c  mx_deixtra.c  mx_deixtra_cycle.c  mx_del_extra_spaces.c  mx_del_intarr.c  mx_file_to_str.c  mx_hex_to_nbr.c  mx_is_alpha.c  mx_is_done.c  mx_is_min.c  mx_is_space.c  mx_isdigit.c  mx_island_index.c  mx_island_list.c  mx_itoa.c  mx_matrix_creator.c  mx_memccpy.c  mx_memcpy.c  mx_memmem.c  mx_mini_list_adress.c  mx_mini_list_filter.c  mx_nbr_to_hex.c  mx_pop_front.c  mx_pop_front_mini.c  mx_pop_specific.c  mx_print_unicode.c  mx_push_back_count.c  mx_push_back_custom.c  mx_push_back_filter.c  mx_replace_substr.c  mx_result_matrix.c  mx_sort_list.c  mx_strsplit.c  (+10 more)
src/: main.c  mx_count_distance.c  mx_count_parallel.c  mx_create_node_custom.c  mx_create_struct.c  mx_deixtra.c  mx_deixtra_cycle.c  mx_index_search.c  mx_is_done.c  mx_is_min.c  mx_island_index.c  mx_island_list.c  mx_matrix_creator.c  mx_pop_front_mini.c  mx_push_back_custom.c  mx_push_result.c  mx_result_list_creator.c  mx_result_matrix.c  mx_sort_result.c  mx_valid_for_1line.c  mx_valid_for_alpha.c  mx_valid_for_digits.c  mx_valid_for_first.c  mx_valid_for_koma.c  mx_valid_for_minus.c  mx_valid_for_slashn.c  mx_validator.c  mx_write_result.c
